--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
 		"react"
 	],
 	"rules": {
+        "no-underscore-dangle": 0,
 		"curly": [2, "multi-line"],
 		"quotes": [2, "single", "avoid-escape"],
 		"react/display-name": 0,
