--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rbarilani/react-simple-inpagenav",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Simple 'inpage navigation' React component",
   "main": "lib/index.js",
   "author": "Ruben Barilani",
@@ -14,22 +14,22 @@
   },
   "dependencies": {
     "classnames": "^2.1.2",
-    "jquery": "^2.1.4",
+    "jquery": "^3.3.1",
     "lodash": "^3.10.0",
-    "query-string": "^3.0.0"
+    "query-string": "^3.0.0",
+    "react": "^0.14.9"
   },
   "devDependencies": {
-    "babel-eslint": "^3.1.14",
-    "eslint": "^0.22.1",
+    "babel-eslint": "4.1.7",
+    "eslint": "0.22.1",
     "eslint-plugin-react": "^2.5.0",
     "gulp": "^3.9.0",
     "gulp-conventional-changelog": "^0.7.0",
-    "react": ">=0.13.3",
     "react-component-gulp-tasks": "^0.7.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^0.14.7"
   },
   "peerDependencies": {
-    "react": ">=0.13.3"
+    "react": "^0.14.7"
   },
   "browserify-shim": {
     "react": "global:React",
@@ -43,7 +43,8 @@
     "lint": "eslint ./src; true",
     "publish:site": "gulp publish:examples",
     "start": "gulp dev",
-    "test": "echo \"no tests yet\" && exit 0"
+    "test": "echo \"no tests yet\" && exit 0",
+    "changelog": "gulp changelog"
   },
   "keywords": [
     "react",
